MYZ-7147 fix z-pocker overflow

--- a/src/components/modal/z-pocket/styles.css
+++ b/src/components/modal/z-pocket/styles.css
@@ -12,18 +12,12 @@
   width: 100%;
   height: 100%;
   z-index: 1000;
-  overflow: auto;
-  overflow: -moz-scrollbars-none;
-  -ms-overflow-style: none;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   background: rgba(0, 0, 0, 0.7);
-}
-
-:host > div::-webkit-scrollbar {
-  width: 0 !important;
 }
 
 :host > div > div {
@@ -48,13 +42,32 @@
   height: 40px;
 }
 
+:host > div > div > header:focus {
+  outline: none;
+}
+
+:host > div > div > header::-moz-focus-inner {
+  border: 0;
+}
+
 :host > div > div > header > z-icon {
   fill: var(--myz-blue);
 }
 
+:host > div > div > header:focus > z-icon {
+  outline: 1px dotted;
+}
+
 :host > div > div > main {
   background: white;
-  overflow: hidden;
+  overflow-y: auto;
+  max-height: calc(100vh - 100px);
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
+
+:host > div > div > main::-webkit-scrollbar {
+  width: 0 !important;
 }
 
 /* Tablet breakpoint */
